skompilowany 2 jar